@@ -16,13 +16,14 @@ on:
       python_version:
         description: 'Python version'
         required: true
-        default: '3.11'
+        default: '3.12'
         type: choice
         options:
           - '3.8'
           - '3.9'
           - '3.10'
           - '3.11'
+          - '3.12'
 jobs:
   prepare:
     runs-on: ubuntu-20.04
